# lws_backend

./: .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 319cc63042d9_add_secret_column.py  6d60d05bbf42_add_meta_description_column.py  84124c40940b_add_alter_guides_info_and_locations_.py  9483480e8a35_add_secret_column_to_ext_materials.py  97bbfe39e0af_update_secret_column_with_false_default.py
lws_backend/: config.py  database.py  files.py  main.py
lws_backend/api/dependencies/: authorization.py
lws_backend/api/routes/: api.py  articles.py  auth.py  ext_material.py  ext_materials.py  files.py  guides.py  login.py  previews.py
lws_backend/core/: config.py  update_client_snap.py
lws_backend/crud/: articles.py  ext_materials.py  guides.py  managed_session.py  page_index.py  previews.py  users.py
lws_backend/database_models/: articles.py  base.py  categories.py  category.py  ext_material.py  ext_materials.py  guides.py  icon.py  icons.py  locations.py  page_index.py  users.py
lws_backend/mounts/: frontend.py
lws_backend/pydantic_models/: article.py  category.py  ext_material.py  file_metadata.py  guide.py  icon.py  material.py  page_index.py  preview.py  user_access_rights.py
