[tool.poetry]
name = "lws_backend"
version = "0.1.0"
description = ""
authors = ["Alex Korzh <alexkorzh7@gmail.com>"]
license = "The Unlicense"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.12.1"
aiofiles = "^0.5.0"
SQLAlchemy = "^1.3.19"
PyYAML = "^5.3.1"
watchdog = "^0.10.3"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pylint = "^2.6.0"
black = "^20.8b1"
mypy = "^0.782"
rope = "^0.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
