[tool.poetry]
name = "lws_backend"
version = "0.1.0"
description = ""
authors = ["Alex Korzh <alexkorzh7@gmail.com>"]
license = "The Unlicense"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.12.1"
aiofiles = "^0.5.0"
SQLAlchemy = "^1.3.19"
PyYAML = "^5.3.1"
watchdog = "^0.10.3"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
black = "^20.8b1"
mypy = "^0.782"
rope = "^0.17.0"
autopep8 = "^1.5.4"
flake8 = "^3.8.4"
flake8-mypy = "^17.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
